force-app/main/default/objects/copado__User_Story__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <description>Current status of the implementation of the User Story.</description>
    <inlineHelpText>Current status of the implementation of the User Story.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requirements Verified</fullName>
                <default>true</default>
                <label>Requirements Verified</label>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
            <value>
                <fullName>Grooming Complete</fullName>
            </value>
            <value>
                <fullName>Developer Assigned</fullName>
            </value>
            <value>
                <fullName>Development In Progress</fullName>
            </value>
            <value>
                <fullName>Development Complete</fullName>
            </value>
            <value>
                <fullName>No Merge Conflicts</fullName>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
            </value>
            <value>
                <fullName>QA In Progress</fullName>
            </value>
            <value>
                <fullName>QA Complete</fullName>
            </value>
            <value>
                <fullName>Ready for UAT</fullName>
            </value>
            <value>
                <fullName>UAT In Progress</fullName>
            </value>
            <value>
                <fullName>UAT Complete</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Production Released</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>