force-app/main/default/objects/copado__User_Story__c/fields/Production_deployment_date_time__c.field-meta.xml
<CustomField>
    <fullName>Production_deployment_date_time__c</fullName>
    <description>Production deployment date &amp; time, this field is updated when the environment is set to production type, which means this us is deployed to production</description>
    <label>Production deployment date &amp; time</label>
    <type>DateTime</type>
</CustomField>