force-app/main/default/objects/copado__User_Story__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>Sequence__c</columns>
    <columns>copado__Is_Bundle__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Priority__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Release__c</columns>
    <columns>Production_deployment_date_time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>